# clean-architecture-fastapi

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  pyproject.toml  pytest.ini  test_token_overlap.py
.claude/agents/: clean-architecture-expert.md
alembic/: env.py
alembic/versions/: 0a9e8c512422_create_users_table.py
app/: __init__.py  main.py
app/application/: __init__.py
app/application/dtos/: __init__.py  auth_dto.py  user_dto.py
app/application/exceptions/: __init__.py  exceptions.py
app/application/services/: __init__.py  auth_service.py  user_service.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  user.py
app/domain/exceptions/: __init__.py  domain_exceptions.py
app/domain/repositories/: __init__.py  base.py  token_repository.py  unit_of_work.py  user_repository.py
app/domain/services/: __init__.py  password_hasher.py  token_service.py
app/infrastructure/: __init__.py
app/infrastructure/config/: settings.py
app/infrastructure/persistence/: __init__.py  database.py
app/infrastructure/persistence/models/: __init__.py  user_model.py
app/infrastructure/repositories/: __init__.py  token_repository_impl.py  unit_of_work_impl.py  user_repository_impl.py
app/infrastructure/security/: __init__.py  argon2_password_hasher.py  jwt_token_service.py
app/presentation/: __init__.py  dependencies.py  error_codes.py  error_schemas.py  exception_handlers.py
app/presentation/api/v1/: auth.py  users.py
tests/: conftest.py
tests/fakes/: __init__.py  password_hasher_fake.py  token_repository_fake.py  token_service_fake.py  unit_of_work_fake.py  user_repository_fake.py
tests/integration/: conftest.py  test_auth_flow.py
tests/unit/: test_auth_service.py  test_jwt_token_service.py  test_password_hasher.py  test_user_dto.py  test_user_entity.py  test_user_service.py
